Update startup script &  fix layout when there are multiple page
1. Update startup script, mongodb clean up log after stop and start,
nodeapp wait for mongodb, etc.
2. Use mixitup pagination to fix layout issue and work perfectly with
filter result

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -492,6 +492,10 @@ input:focus{
   height: 35px;
 }
 
+.btn-mixitup{
+  padding: 6px 12px !important;
+}
+
 .btn:hover {
   //.text-white;
 }
